<resources>
    <string name="app_name">OpenMe</string>

    <string name="app_name_pinyin">OpenMe</string>

    <!--activity_main-->
    <string name="default_title">OpenMe</string>
    <string name="str_my_blog">主页</string>
    <string name="str_joker">欢笑</string>
    <string name="str_joker_title">欢声笑语</string>
    <string name="str_finder">发现</string>
    <string name="str_mine">工具</string>
    <string name="str_main_url_hint">请输入网址</string>
    <string name="str_main_more">更多推荐</string>
    <string name="str_main_url_illegal">输入网址格式不正确</string>

    <!--activity_launch-->
    <string name="str_text_slogan">OM\nOpen Use Love</string>
    <string name="str_chase_dream">追梦</string>
    <string name="str_copyright">Copyright © 2019 - xxxx Qi</string>

    <!--toast_view_exit-->
    <string name="str_exit_app">再按一次退出程序</string>

    <!--fragment_joke-->
    <string name="str_banner_animation_setting">默认动画样式 - Default</string>

    <!--recyclerView_item_joker-->
    <string name="str_get_joker">点击重新获取</string>
    <string name="str_joker_content">小区门口修车师傅生意特好小区门口修车师傅生意特好小区门口修车师傅生意特
        好小区门口修车师傅生意特好小区门口修车师傅生意特好小区门口修车师傅生意特好</string>
    <string name="str_joker_update_time">2019-06-06 10:55:02</string>

    <!-- dialog_view_progress.xml -->
    <string name="default_loading_text">加载中...</string>

    <!--    fragment_mine.xml-->
    <string name="default_name">OpenMe</string>
    <string name="default_birth">破壳日 [1994/09/23]</string>
    <string name="mine_weather">天气查询</string>
    <string name="mine_rubbish_sort">垃圾分类</string>
    <string name="mine_setting">分享</string>

    <!--    fragment_news.xml-->
    <string name="str_news_headlines">头条</string>
    <string name="str_news_social">社会</string>
    <string name="str_news_domestic">国内</string>
    <string name="str_news_international">国际</string>
    <string name="str_news_entertainment">娱乐</string>
    <string name="str_news_sports">体育</string>
    <string name="str_news_military">军事</string>
    <string name="str_news_technology">科技</string>
    <string name="str_news_finance">财经</string>
    <string name="str_news_fashion">时尚</string>

    <!--    fragment_weather.xml-->
    <string name="str_weather_hint">请输入要查询的 城市/地区</string>
    <string name="str_weather_search">搜索</string>
    <string name="str_weather_PCC">省-市-县区</string>
    <string name="str_weather_current">当前天气</string>
    <string name="str_weather_temperature">（温度）</string>
    <string name="str_weather_humidity">（湿度）</string>
    <string name="str_weather_wind_direction">（风向）</string>
    <string name="str_weather_wind_power">（风力）</string>
    <string name="str_weather_quality">（空气质量指数）</string>
    <string name="str_weather_last5days">最近 5 天天气</string>

    <!--    pop_view_joker.xml-->
    <string name="str_joker_up">上</string>
    <string name="str_joker_down">下</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_new_list_title">为什么满大街都是手机专卖店，没人买也不会倒闭？其实里面水很深</string>
    <string name="str_new_list_source_time">商业八卦见闻  2020-06-22 15:05:47</string>
    <string name="str_support_refresh_hint">下拉可刷新</string>
    <string name="str_tool_fine_statement_default">技术本身就是件朴实无华的事情，来不得半点投机取巧。</string>
    <string name="str_tool_rubbish_sort_keyword">输入需要查询分类物品的主要字词</string>
    <string name="str_item_weather_date">江西省 赣州市\n2020-06-27（今天） 星期六</string>
    <string name="str_tool_weather_hint">请输入需要查询的城市</string>
    <string name="str_lottery_type_hint">请选择彩票种类</string>
    <string name="str_lottery_expect_hint">请输入彩票期号</string>
    <string name="str_logistics_hint">请输入 【运单号】</string>
    <string name="str_logistics_item_desc">您的快递已签收, 签收人在【丰巢的印月尚庭(丰巢智能快递柜)】(丹枫路)领取。如有疑问请电联:（18258261251）, 投诉电话:（4000633333,18258261251）, 您的快递已经妥投。风里来雨里去, 只为客官您满意。上有老下有小, 赏个好评好不好？【请在评价快递员处帮忙点亮五颗星星哦~】</string>

    <string name="str_menu_about">应用名称（OpenMe）\n开发者（邹奇）\n博客（https://imxiaoqi.blog.csdn.net）\n微信（zou2273536886）\n联系邮箱（15011307035@163.com）\n网易云音乐（丶ImXiaoQi丶）</string>


</resources>
