<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_title"
        android:background="@android:color/darker_gray"
        android:layout_weight="0.06"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:clickable="true"
            android:foreground="@drawable/water_foreground"
            android:id="@+id/iv_title_menu"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/title_menu"
            android:layout_centerVertical="true"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <TextView
            android:singleLine="true"
            android:ellipsize="end"
            android:maxEms="10"
            android:layout_toRightOf="@+id/iv_title_menu"
            android:layout_toLeftOf="@+id/iv_title_refresh"
            android:id="@+id/tv_title"
            android:textColor="@android:color/white"
            android:text="@string/default_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:foreground="@drawable/water_foreground"
            android:background="@color/color_other"
            android:id="@+id/iv_title_refresh"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/title_refresh"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="0.88"
        android:layout_height="0dp">

        <FrameLayout
            android:id="@+id/framelayout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>



    </LinearLayout>

    <LinearLayout
        android:background="@drawable/edittext_drawable_shape"
        android:layout_gravity="bottom"
        android:visibility="visible"
        android:id="@+id/linear_tab"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.06"
        android:layout_height="0dp">

        <LinearLayout
            android:background="@color/color_select"
            android:foreground="@drawable/water_foreground"
            android:clickable="true"
            android:id="@+id/linear_one"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:clickable="false"
                android:visibility="visible"
                android:id="@+id/iv_one"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/main_select"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:clickable="false"
                android:id="@+id/tv_one"
                android:text="@string/str_my_blog"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:foreground="@drawable/water_foreground"
            android:clickable="true"
            android:gravity="center"
            android:id="@+id/linear_two"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:visibility="visible"
                android:clickable="false"
                android:id="@+id/iv_two"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/joke_unselect"
                android:layout_width="30dp"
                android:layout_height="20dp" />

            <TextView
                android:clickable="false"
                android:id="@+id/tv_two"
                android:text="@string/str_joker"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:foreground="@drawable/water_foreground"
            android:clickable="true"
            android:id="@+id/linear_three"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:visibility="visible"
                android:clickable="false"
                android:id="@+id/iv_three"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/discovery_unselect"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:clickable="false"
                android:id="@+id/tv_three"
                android:text="@string/str_finder"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:foreground="@drawable/water_foreground"
            android:clickable="true"
            android:id="@+id/linear_four"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:visibility="visible"
                android:clickable="false"
                android:id="@+id/iv_four"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/tool_unselect"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:clickable="false"
                android:id="@+id/tv_four"
                android:text="@string/str_mine"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>