<?xml version="1.0" encoding="utf-8"?>
<in.srain.cube.views.ptr.PtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_frame_joker"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.JokeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_joker_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:visibility="invisible"
                app:title_background="@android:color/transparent"
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="10dp"
                app:banner_default_image="@mipmap/app_icon"
                app:title_textcolor="@android:color/darker_gray"/>
            <RelativeLayout
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/relative_banner_animation_setting"
                android:clickable="true"
                android:foreground="@drawable/water_foreground"
                android:background="@color/color_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:id="@+id/tv_banner_animation_setting"
                    android:text="@string/str_banner_animation_setting"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:visibility="gone"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:textColor="@color/color_red"
                android:id="@+id/tv_get_joker"
                android:text="@string/str_get_joker"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_support_refresh_hint"
                android:visibility="gone"
                android:text="@string/str_support_refresh_hint"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginTop="2dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/recycle_view_joker"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ImageView
            android:visibility="gone"
            android:clickable="true"
            android:id="@+id/iv_another"
            android:foreground="@drawable/water_foreground"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/refresh"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <ImageView
            android:visibility="gone"
            android:clickable="true"
            android:layout_below="@+id/iv_another"
            android:id="@+id/iv_pause"
            android:foreground="@drawable/water_foreground"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/pause"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <ImageView
            android:visibility="gone"
            android:clickable="true"
            android:layout_below="@+id/iv_pause"
            android:id="@+id/iv_start"
            android:foreground="@drawable/water_foreground"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/start"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <ImageView
            android:id="@+id/iv_joker_timeout"
            android:visibility="gone"
            android:foreground="@drawable/water_foreground_whte"
            android:clickable="true"
            android:src="@mipmap/refresh"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</in.srain.cube.views.ptr.PtrFrameLayout>